# led_strip

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  esp_app.cpp  esp_app.hpp  esp_connection.cpp  esp_connection.hpp  main.c  octopus_link.cpp  wifi.c  wifi.h
